--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.4.1",
+    "css-loader": "^3.5.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "style-loader": "^1.1.4",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
