--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "classnames": "^2.2.6",
     "css-loader": "^3.5.2",
     "react": "^16.13.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-transition-group": "^4.3.0",
